force-app/main/default/objects/ysign__Yousign_Signatory__c/ysign__Yousign_Signatory__c.object-meta.xml
<CustomObject>
    <label>Yousign Signatory</label>
    <nameField>
        <displayFormat>YS-{00000}</displayFormat>
        <label>Yousign Signatory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yousign Signatories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>