force-app/main/default/objects/ysign__Yousign_Signatory__c/fields/ysign__Contact__c.field-meta.xml
<CustomField>
    <fullName>ysign__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>Contact.Email</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Contact.Phone</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Contact.MobilePhone</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Yousign Signatories</relationshipLabel>
    <relationshipName>Yousign_Signatories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>