force-app/main/default/objects/ysign__Yousign_Signatory__c/fields/ysign__Email__c.field-meta.xml
<CustomField>
    <fullName>ysign__Email__c</fullName>
    <formula>ysign__Contact__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>