force-app/main/default/objects/ysign__Yousign_Signatory__c/fields/ysign__Email_Manual__c.field-meta.xml
<CustomField>
    <fullName>ysign__Email_Manual__c</fullName>
    <label>Email Manual</label>
    <type>Email</type>
</CustomField>