force-app/main/default/objects/ysign__Yousign_Signatory__c/fields/ysign__firstName_manual__c.field-meta.xml
<CustomField>
    <fullName>ysign__firstName_manual__c</fullName>
    <label>firstName manual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>