force-app/main/default/objects/ysign__Yousign_Signatory__c/fields/ysign__Link_to_Sign__c.field-meta.xml
<CustomField>
    <fullName>ysign__Link_to_Sign__c</fullName>
    <formula>IF(
    ISBLANK(ysign__Yousign_Signatory_Id__c), 
    null,
    HYPERLINK( 
        IF($Setup.ysign__Yousign_setting__c.ysign__Environment__c=&apos;PRODUCTION&apos;, 
            &apos;https://webapp.yousign.com&apos;, 
            &apos;https://staging-app.yousign.com&apos;
        ) + 
        &quot;/procedure/sign?members=&quot; + ysign__Yousign_Signatory_Id__c,
        $Label.ysign__yousign_lc_title, 
        &apos;YouSign&apos;) 
)</formula>
    <label>Link to Sign</label>
    <type>Text</type>
</CustomField>