force-app/main/default/objects/ysign__Yousign_Signatory__c/fields/ysign__Order__c.field-meta.xml
<CustomField>
    <fullName>ysign__Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>