force-app/main/default/objects/ysign__Yousign_Signatory__c/fields/ysign__Phone__c.field-meta.xml
<CustomField>
    <fullName>ysign__Phone__c</fullName>
    <formula>IF( ISBLANK( ysign__Contact__r.MobilePhone ) , ysign__Contact__r.Phone, ysign__Contact__r.MobilePhone)</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>