force-app/main/default/objects/ysign__Yousign_Signatory__c/fields/ysign__Phone_manual__c.field-meta.xml
<CustomField>
    <fullName>ysign__Phone_manual__c</fullName>
    <label>Phone manual</label>
    <type>Phone</type>
</CustomField>