force-app/main/default/objects/ysign__Yousign_Signatory__c/fields/ysign__Role__c.field-meta.xml
<CustomField>
    <fullName>ysign__Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signatory</fullName>
            </value>
            <value>
                <fullName>Validator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>