force-app/main/default/objects/ysign__Yousign_Signatory__c/fields/ysign__Signatory_Name__c.field-meta.xml
<CustomField>
    <fullName>ysign__Signatory_Name__c</fullName>
    <formula>IF(ISBLANK(ysign__Contact__c),
ysign__firstName_manual__c &amp; &apos; &apos; &amp;  ysign__lastName_manual__c,
ysign__Contact__r.FirstName &amp; &apos; &apos; &amp;  ysign__Contact__r.LastName
)</formula>
    <label>Signatory Name</label>
    <type>Text</type>
</CustomField>