force-app/main/default/objects/ysign__Yousign_Signatory__c/fields/ysign__TemplateRole__c.field-meta.xml
<CustomField>
    <fullName>ysign__TemplateRole__c</fullName>
    <label>Template Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>